--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -1,5 +1,5 @@
 .btn {
-    @apply rounded py-2 sm:px-6 px-3 sm:text-sm text-xs leading-6 focus:outline-0 focus-visible:outline-2 focus-visible:outline-offset-2 disabled:bg-gray-400 transition-all;
+    @apply rounded py-2 px-6 sm:text-sm text-xs leading-6 focus:outline-0 focus-visible:outline-2 focus-visible:outline-offset-2 disabled:bg-gray-400 transition-all;
 }
 
 .btn-primary {
@@ -8,4 +8,16 @@
 
 .btn-primary-outline {
     @apply border bg-white border-primary text-primary hover:bg-primary-dark hover:text-white;
+}
+
+.btn-secondary {
+    @apply bg-secondary text-white hover:bg-secondary-light;
+}
+
+.btn-secondary-outline {
+    @apply border bg-white border-secondary text-secondary hover:bg-secondary hover:text-white;
+}
+
+.btn-gray {
+    @apply bg-[#5D5D5D] text-white hover:bg-gray-800;
 }
