--- a/resources/css/inputs.css
+++ b/resources/css/inputs.css
@@ -11,6 +11,10 @@ input[type=checkbox] {
     @apply h-4 w-4 rounded border-gray-300 text-primary focus:ring-primary !important;
 }
 
+input[type=radio] {
+    @apply h-4 w-4 border-gray-300 text-primary focus:ring-primary-dark !important;
+}
+
 textarea {
     @apply block w-full rounded-lg border-0 px-3 py-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6 !important;
 }
