--- a/resources/css/steps.css
+++ b/resources/css/steps.css
@@ -14,6 +14,10 @@
     @apply h-0.5 w-full bg-gray-200;
 }
 
+.steps ol li .line.complete {
+    @apply h-0.5 w-full bg-primary-dark;
+}
+
 .steps ol li .bullet {
     @apply relative flex h-10 w-10 items-center justify-center;
 }
