--- a/resources/css/inputs.css
+++ b/resources/css/inputs.css
@@ -4,7 +4,7 @@ input[type=time],
 input[type=number],
 input[type=email],
 input[type=password] {
-    @apply block bg-white w-full rounded-lg border-0 px-3 py-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6 !important;
+    @apply block bg-white w-full rounded-lg border-0 px-3 py-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6 disabled:bg-[#EEEEEE] disabled:text-[#A6A8AB] !important;
 }
 
 input[type=checkbox] {
