--- a/resources/css/inputs.css
+++ b/resources/css/inputs.css
@@ -28,7 +28,7 @@ label {
 }
 
 select {
-    @apply block w-full rounded-md border-0 px-3 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6 !important;
+    @apply block w-full rounded-md border-0 px-3 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6 disabled:bg-[#EEEEEE] disabled:text-[#A6A8AB] !important;
 }
 
 .form-check {
