--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -1,5 +1,5 @@
 .btn {
-    @apply rounded py-2 px-6 sm:text-sm text-xs leading-6 focus:outline-0 focus-visible:outline-2 focus-visible:outline-offset-2 disabled:bg-gray-400 transition-all;
+    @apply inline-block rounded py-2 px-6 sm:text-sm text-xs leading-6 focus:outline-0 focus-visible:outline-2 focus-visible:outline-offset-2 disabled:bg-gray-400 transition-all;
 }
 
 .btn-primary {
