--- a/resources/css/modals.css
+++ b/resources/css/modals.css
@@ -7,7 +7,7 @@
 }
 
 .modal .modal-body {
-    @apply relative transform overflow-hidden rounded-lg bg-white px-8 py-6 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-xl sm:px-6 sm:py-12;
+    @apply relative transform overflow-hidden rounded-lg px-8 py-6 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-xl sm:px-6 sm:py-12;
 }
 
 .modal .modal-body .modal-title {
