--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,6 +11,7 @@
 @import "badge.css";
 @import "slider.css";
 @import "countdown.css";
+@import "book.css";
 @import '@splidejs/splide/dist/css/splide.min.css';
 
 @tailwind base;
