--- a/resources/css/inputs.css
+++ b/resources/css/inputs.css
@@ -7,6 +7,13 @@ input[type=password] {
     @apply block bg-white w-full rounded-lg border-0 px-3 py-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6 disabled:bg-[#EEEEEE] disabled:text-[#A6A8AB] !important;
 }
 
+input[type="date"]  {
+    display:block;
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    @apply border-gray-300;
+}
+
 form.dark input[type=text],
 form.dark input[type=date],
 form.dark input[type=time],
