--- a/resources/css/inputs.css
+++ b/resources/css/inputs.css
@@ -1,5 +1,4 @@
 input[type=text],
-input[type=date],
 input[type=time],
 input[type=number],
 input[type=email],
@@ -7,10 +6,8 @@ input[type=password] {
     @apply block bg-white w-full rounded-lg border-0 px-3 py-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6 disabled:bg-[#EEEEEE] disabled:text-[#A6A8AB] !important;
 }
 
-input[type="date"]  {
-    -webkit-appearance: textfield !important;
-    -moz-appearance: textfield !important;
-    @apply border-gray-300 !important;
+input[type=date]  {
+    @apply block bg-white w-full rounded-lg border px-3 py-2 text-gray-900 !important;
 }
 
 form.dark input[type=text],
