--- a/resources/css/inputs.css
+++ b/resources/css/inputs.css
@@ -6,7 +6,8 @@ input[type=password] {
     @apply block bg-white w-full rounded-lg border-0 px-3 py-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6 disabled:bg-[#EEEEEE] disabled:text-[#A6A8AB] !important;
 }
 
-input[type=date]  {
+input[type=date],
+input[type=time] {
     @apply inline-block bg-white w-full rounded-lg border border-gray-300 px-3 py-2 text-gray-900 !important;
 }
 
@@ -18,6 +19,11 @@ form.dark input[type=email],
 form.dark input[type=password],
 form.dark textarea {
     @apply bg-black text-white !important;
+}
+
+form.dark input[type=date],
+form.dark input[type=time] {
+    @apply border border-white px-3 py-2 !important;
 }
 
 form.dark input[type=date]::-webkit-calendar-picker-indicator,
