--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -6,6 +6,12 @@ body {
     @apply font-space-grotesk sm:text-[17px];
 }
 
+@media only screen and (min-width: 640px) and (max-width: 949px) {
+    body {
+        @apply text-[16px];
+    }
+}
+
 .pagination {
     @apply flex justify-center items-center mt-8;
 }
