--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,6 +13,8 @@
 @import "countdown.css";
 @import "book.css";
 @import "post-item.css";
+@import "block-1.css";
+
 @import '@splidejs/splide/dist/css/splide.min.css';
 @import "flatpickr/dist/flatpickr.min.css";
 @tailwind base;
